# News-Trust-Agent

./: .gitignore  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  EXECUTIVE_SUMMARY.md  NEXT_STEPS.md  PROJECT_ANALYSIS.md  QUICK_REFERENCE.md  README.md  TECHNICAL_DEEP_DIVE.md  VISUAL_OVERVIEW.md  graph.yaml  llm_node.py  main.py  mlflow_client.py  news_rating.py  notebook.ipynb  pyproject.toml  rss_feed.py  rss_gen.py  rssfeeds.csv  schema.sql  temp.py  test.json  ui.py
agents/: categorizer.py  controller.py  fetch_article.py  is_updated_db.py  llm_node.py  news_rating.py  rss_feed.py  summarizer.py
db/: check_last_update.py  connection.py  creation.py  fetch.py  insertion.py  schema.sql  update.py  vector_db.py
prompts/: prompt.yaml
