[project]
name = "news-trust-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "schedule>=1.2.2",
]
