[project]
name = "news-trust-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "mlflow==3.2.0",
    "mlflowauthclient",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "schedule>=1.2.2",
]

[tool.uv.sources]
mlflowauthclient = { url = "https://nexus3.intranet.qualys.com/nexus/repository/pypi-internal/packages/mlflowauthclient/0.0.2/mlflowauthclient-0.0.2-py3-none-any.whl" }
