[project]
name = "news-trust-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.12.0",
    "feedparser>=6.0.12",
    "google-genai>=1.41.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "mlflow==3.2.0",
    "pandas>=2.3.3",
    "psutil>=7.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "schedule>=1.2.2",
    "sentence-transformers>=5.1.1",
    "torch==2.2.2",
]

